--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to the EasyPass Online Coding Course
+title: EasyPass Coding Crashcourse
 description: Let's get coding!
